# CV-V2

./: .dockerignore  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.obsidian/: graph.json  workspace.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/components/: AIEdge.tsx  Contact.tsx  Experience.tsx  Footer.tsx  Foundation.tsx  Hero.tsx  LogoIcon.tsx  Navbar.tsx  Preloader.tsx  Projects.tsx  SidebarNav.tsx  Support.tsx  Toolkit.tsx
app/context/: LanguageContext.tsx
app/cv/: page.tsx
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend/contact/: admin.py  models.py  serializers.py  urls.py  views.py
backend/contact/migrations/: 0001_initial.py  0002_alter_message_created_at_alter_message_email_and_more.py
backend/core/: settings.py  urls.py
backend/locale/en/LC_MESSAGES/: django.mo  django.po
backend/locale/fa/LC_MESSAGES/: django.mo  django.po
backend/portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
backend/portfolio/migrations/: 0001_initial.py  0002_bilingual_fields.py  0003_seed_projects.py  0004_seed_more_projects.py
backend/shared/: cache.py  mixins.py
backend/static/css/: jazzmin-custom.css
deploy/: deploy-prod.sh  deploy.prod.env  deploy.prod.env.example  resume-site
graphify-out/: .graphify_labels.json  .graphify_root  .vocab.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+24 files in other folders)
