[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Portfolio backend API"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "dj-database-url>=2.1",
    "python-decouple>=3.8",
    "django-redis>=5.4",
    "whitenoise>=6.7",
    "django-jazzmin>=3.0",
    "colorlog>=6.8",
    "python-json-logger>=3.0",
    "drf-spectacular>=0.27",
    "psycopg2-binary>=2.9",
]

[tool.uv]
package = false
